[package]
name = "docx"
version = "0.2.1"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PoiScript/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[badges]
travis-ci = { repository = "PoiScript/docx-rs" }

[dependencies]
derive_more = "0.99.3"
log = "0.4.8"
xmlparser = "0.13.0"
strong-xml = "0.1.3"
zip = "0.5.4"

[dev-dependencies]
env_logger = "0.7.1"
