[package]
name = "docx"
version = "1.1.2"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PoiScript/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[dependencies]
derive_more = "0.99.5"
log = "0.4.8"
strong-xml = { version = "0.6.2", features = ["log"] }
zip = "0.5.5"

[dev-dependencies]
env_logger = "0.7.1"
