[package]
name = "docx-codegen"
version = "0.1.4"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Code generation for docx-rs."

[lib]
name = "docx_codegen"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.4"
quote = "1.0.2"
syn = { version = "1.0.5", features = ["extra-traits"] }
