[package]
name = "docx"
version = "0.2.1"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PoiScript/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[badges]
travis-ci = { repository = "PoiScript/docx-rs" }

[dependencies]
docx-codegen = { version = "0.2.1", path = "../codegen/" }
jetscii = "0.4.4"
lazy_static = "1.4.0"
log = "0.4.8"
memchr = "2.2.1"
xmlparser = "0.12.0"
zip = "0.5.3"

[dev-dependencies]
env_logger = "0.7.1"
